k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: test-app-deployment
  rules:
  - http:
      paths:
      - path: /testapp
        pathType: Prefix
        backend:
          service:
            name: test-app-service
            port:
              number: 80
